src/test/deca/context/valid/created/method_same_name_diff_class.deca
//Description :
// Test de methode meme nom dans class different
//
// Resultats :
// Erreur


class Premiere {

    void printX(float x){
    print(x);
    }
}

class Second {

void printX(float x){
print(x);
  }
  
}
